src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__function_block_implicit_downcast.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: Parameter in_ref_int is passed by reference, it requires an argument of type INT but got LINT
   ┌─ <internal>:11:17
   │
11 │                 var1_lint, // downcast
   │                 ^^^^^^^^^ Parameter in_ref_int is passed by reference, it requires an argument of type INT but got LINT

warning[E067]: Implicit downcast from 'LINT' to 'INT'.
   ┌─ <internal>:11:17
   │
11 │                 var1_lint, // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LINT' to 'INT'.

error[E037]: Parameter in_ref_dword is passed by reference, it requires an argument of type DWORD but got LWORD
   ┌─ <internal>:12:17
   │
12 │                 var_lword, // downcast
   │                 ^^^^^^^^^ Parameter in_ref_dword is passed by reference, it requires an argument of type DWORD but got LWORD

warning[E067]: Implicit downcast from 'LWORD' to 'DWORD'.
   ┌─ <internal>:12:17
   │
12 │                 var_lword, // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LWORD' to 'DWORD'.

warning[E067]: Implicit downcast from 'INT' to 'SINT'.
   ┌─ <internal>:14:17
   │
14 │                 INT#var1_lint, // downcast
   │                 ^^^^^^^^^^^^^ Implicit downcast from 'INT' to 'SINT'.

error[E037]: Parameter in_out is passed by reference, it requires an argument of type INT but got LINT
   ┌─ <internal>:15:17
   │
15 │                 var2_lint, // downcast
   │                 ^^^^^^^^^ Parameter in_out is passed by reference, it requires an argument of type INT but got LINT

warning[E067]: Implicit downcast from 'LINT' to 'INT'.
   ┌─ <internal>:15:17
   │
15 │                 var2_lint, // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LINT' to 'INT'.

error[E037]: Invalid assignment: cannot assign 'WSTRING' to 'STRING'
   ┌─ <internal>:16:17
   │
16 │                 var_wstr, // invalid
   │                 ^^^^^^^^ Invalid assignment: cannot assign 'WSTRING' to 'STRING'

warning[E067]: Implicit downcast from 'LINT' to 'DINT'.
   ┌─ <internal>:17:17
   │
17 │                 var1_lint // downcast
   │                 ^^^^^^^^^ Implicit downcast from 'LINT' to 'DINT'.
