src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__function_call_parameter_validation.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:25:17
   │
25 │             foo(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                 ^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E065]: The type DINT 32 is too small to hold a Pointer
   ┌─ <internal>:25:33
   │
25 │             foo(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                                 ^^^^^^^^^^^^^^ The type DINT 32 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'
   ┌─ <internal>:25:33
   │
25 │             foo(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                                 ^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'

error[E037]: Parameter output1 is passed by reference, it requires an argument of type DINT but got REAL
   ┌─ <internal>:25:60
   │
25 │             foo(input1 := var2, inout1 := var3, output1 => var4); // invalid types assigned
   │                                                            ^^^^ Parameter output1 is passed by reference, it requires an argument of type DINT but got REAL

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:27:17
   │
27 │             foo(var2, var3, var4); // invalid types assigned
   │                 ^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E065]: The type DINT 32 is too small to hold a Pointer
   ┌─ <internal>:27:23
   │
27 │             foo(var2, var3, var4); // invalid types assigned
   │                       ^^^^ The type DINT 32 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'
   ┌─ <internal>:27:23
   │
27 │             foo(var2, var3, var4); // invalid types assigned
   │                       ^^^^ Invalid assignment: cannot assign 'REF_TO WSTRING' to 'DINT'

error[E037]: Parameter output1 is passed by reference, it requires an argument of type DINT but got REAL
   ┌─ <internal>:27:29
   │
27 │             foo(var2, var3, var4); // invalid types assigned
   │                             ^^^^ Parameter output1 is passed by reference, it requires an argument of type DINT but got REAL

warning[E067]: Implicit downcast from 'REAL' to 'DINT'.
   ┌─ <internal>:27:29
   │
27 │             foo(var2, var3, var4); // invalid types assigned
   │                             ^^^^ Implicit downcast from 'REAL' to 'DINT'.
