src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__invalid_cast_statement_causes_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: res
---
SyntaxError { message: "Could not resolve reference to var1", range: [SourceRange { range: 141..145 }], err_no: reference__unresolved }

