src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__method_implicit_downcast.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
warning: Implicit downcast from 'LINT' to 'INT'.
  ┌─ <internal>:8:23
  │
8 │         cl.testMethod(var_lint, var_arr, ADR(var_arr)); // downcast, invalid, ok
  │                       ^^^^^^^^ Implicit downcast from 'LINT' to 'INT'.

error: Invalid assignment: cannot assign 'ARRAY[1..3] OF DINT' to 'ARRAY[1..3] OF SINT'
  ┌─ <internal>:8:33
  │
8 │         cl.testMethod(var_lint, var_arr, ADR(var_arr)); // downcast, invalid, ok
  │                                 ^^^^^^^ Invalid assignment: cannot assign 'ARRAY[1..3] OF DINT' to 'ARRAY[1..3] OF SINT'
